tests/paczka1/fuzzy1/63924720.err
Error in line 5: S58 S58 31,1
Error in line 7: S58 S493 51,9
Error in line 8: dpJn19fZKg S58 30,8
Error in line 14: dpJn19fZKg S417 81,1
Error in line 30: JpHnFBg6 A382 4,8
Error in line 35: S58 S417 63,7
Error in line 38: S5 A32 69,7
